<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon"
    tools:context=".ReviewWriting">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <ImageView
                        android:id="@+id/menubtn"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:src="@drawable/mainmenu" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentRight="true"
                        android:elevation="2dp"
                        android:src="@drawable/user"
                        app:civ_border_color="#f1f1f1"
                        app:civ_border_width="2dp" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputlarge_style"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/reviewTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/write_review"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/reviewSubjectTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/subject"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTitleTextView" />


        <EditText
            android:id="@+id/reviewSubjectTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Subject"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="10dp"
            android:background="#F1F1F1"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTitleTextView"/>

        <TextView
            android:id="@+id/reviewTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/comment"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewSubjectTextViewLabel" />

        <EditText
            android:id="@+id/reviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your comment"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="210dp"
            android:layout_marginRight="10dp"
            android:background="#F1F1F1"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewSubjectTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratingTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/rating_colon"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTextViewLabel" />

        <EditText
            android:id="@+id/ratingTextView"
            android:layout_toRightOf="@id/ratingTextViewLabel"
            android:layout_toEndOf="@id/ratingTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input 0-5 rating (up to 1 decimal place)"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="10dp"
            android:background="#F1F1F1"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="#000"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTextViewLabel" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_below="@id/ratingTextViewLabel"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTextViewLabel" />
        />

        <Button
            android:id="@+id/buttonSubmit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#9C27B0"
        app:headerLayout="@layout/header_layout"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>